--- a/frappe/core/doctype/system_settings/system_settings.json
+++ b/frappe/core/doctype/system_settings/system_settings.json
@@ -716,11 +716,11 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "default": "0", 
+   "default": "OTP App", 
    "depends_on": "eval:doc.enable_two_factor_auth==1", 
-   "description": "If this is checked, the default 2FA method in User &gt; two_factor_method will be used", 
-   "fieldname": "fix_2fa_method", 
-   "fieldtype": "Check", 
+   "description": "Choose authentication method to be used by all users", 
+   "fieldname": "two_factor_method", 
+   "fieldtype": "Select", 
    "hidden": 0, 
    "ignore_user_permissions": 0, 
    "ignore_xss_filter": 0, 
@@ -728,9 +728,10 @@
    "in_global_search": 0, 
    "in_list_view": 0, 
    "in_standard_filter": 0, 
-   "label": "Fix authentication method", 
+   "label": "Authentication method", 
    "length": 0, 
    "no_copy": 0, 
+   "options": "OTP App\nSMS\nEmail", 
    "permlevel": 0, 
    "precision": "", 
    "print_hide": 0, 
@@ -1029,7 +1030,7 @@
  "issingle": 1, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-07-06 14:44:04.601775", 
+ "modified": "2017-07-07 17:21:50.082744", 
  "modified_by": "Administrator", 
  "module": "Core", 
  "name": "System Settings", 
