--- a/.travis.yml
+++ b/.travis.yml
@@ -51,4 +51,4 @@ script:
   - set -e
   - bench --verbose run-tests
   - sleep 5
-  - bench --verbose run-tests --ui-tests
+  - bench --verbose run-ui-tests --app frappe
