--- a/frappe/core/doctype/system_settings/system_settings.json
+++ b/frappe/core/doctype/system_settings/system_settings.json
@@ -778,39 +778,8 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "default": "0", 
-   "fieldname": "enable_two_factor_auth", 
-   "fieldtype": "Check", 
-   "hidden": 0, 
-   "ignore_user_permissions": 0, 
-   "ignore_xss_filter": 0, 
-   "in_filter": 0, 
-   "in_global_search": 0, 
-   "in_list_view": 0, 
-   "in_standard_filter": 0, 
-   "label": "Enable Two Factor Authentication", 
-   "length": 0, 
-   "no_copy": 0, 
-   "permlevel": 0, 
-   "precision": "", 
-   "print_hide": 0, 
-   "print_hide_if_no_value": 0, 
-   "read_only": 0, 
-   "remember_last_selected_value": 0, 
-   "report_hide": 0, 
-   "reqd": 0, 
-   "search_index": 0, 
-   "set_only_once": 0, 
-   "unique": 0
-  }, 
-  {
-   "allow_bulk_edit": 0, 
-   "allow_on_submit": 0, 
-   "bold": 0, 
-   "collapsible": 0, 
-   "columns": 0, 
    "default": "OTP App", 
-   "depends_on": "eval:doc.enable_two_factor_auth==1", 
+   "depends_on": "", 
    "description": "Choose authentication method to be used by all users", 
    "fieldname": "two_factor_method", 
    "fieldtype": "Select", 
@@ -821,7 +790,7 @@
    "in_global_search": 0, 
    "in_list_view": 0, 
    "in_standard_filter": 0, 
-   "label": "Authentication method", 
+   "label": "Two Factor Authentication method", 
    "length": 0, 
    "no_copy": 0, 
    "options": "OTP App\nSMS\nEmail", 
@@ -843,7 +812,7 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "depends_on": "eval:doc.enable_two_factor_auth==1 && doc.two_factor_method == \"OTP App\"", 
+   "depends_on": "eval:doc.two_factor_method == \"OTP App\"", 
    "description": "Time in seconds to retain QR code image on server. Min:<strong>240</strong>", 
    "fieldname": "lifespan_qrcode_image", 
    "fieldtype": "Int", 
@@ -854,7 +823,7 @@
    "in_global_search": 0, 
    "in_list_view": 0, 
    "in_standard_filter": 0, 
-   "label": "Delete QR Code Image On server", 
+   "label": "Expiry time of QR Code Image Page", 
    "length": 0, 
    "no_copy": 0, 
    "permlevel": 0, 
@@ -876,7 +845,7 @@
    "collapsible": 0, 
    "columns": 0, 
    "default": "Frappe Framework", 
-   "depends_on": "eval:doc.enable_two_factor_auth==1", 
+   "depends_on": "", 
    "fieldname": "otp_issuer_name", 
    "fieldtype": "Data", 
    "hidden": 0, 
@@ -1157,8 +1126,8 @@
  "issingle": 1, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-07-31 02:05:48.674604", 
- "modified_by": "chude.osiegbu@manqala.com", 
+ "modified": "2017-08-04 12:05:08.054099", 
+ "modified_by": "Administrator", 
  "module": "Core", 
  "name": "System Settings", 
  "name_case": "", 
