--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nightwatch": "^0.9.16",
     "redis": "^2.7.1",
     "socket.io": "^2.0.1",
-    "superagent": "^3.5.2"
+    "superagent": "^3.5.2",
+	"touch": "^3.1.0"
   }
 }
