--- a/frappe/printing/doctype/print_settings/print_settings.json
+++ b/frappe/printing/doctype/print_settings/print_settings.json
@@ -260,7 +260,7 @@
    "columns": 0, 
    "default": "Modern", 
    "fieldname": "print_style", 
-   "fieldtype": "Select", 
+   "fieldtype": "Link", 
    "hidden": 0, 
    "ignore_user_permissions": 0, 
    "ignore_xss_filter": 0, 
@@ -271,7 +271,7 @@
    "label": "Print Style", 
    "length": 0, 
    "no_copy": 0, 
-   "options": "Modern\nClassic\nStandard\nMonochrome", 
+   "options": "Print Style", 
    "permlevel": 0, 
    "print_hide": 0, 
    "print_hide_if_no_value": 0, 
@@ -597,7 +597,7 @@
  "issingle": 1, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-05-03 05:58:55.562540", 
+ "modified": "2017-08-17 02:15:55.025352", 
  "modified_by": "Administrator", 
  "module": "Printing", 
  "name": "Print Settings", 
