--- a/frappe/data_migration/doctype/data_migration_mapping/data_migration_mapping.json
+++ b/frappe/data_migration/doctype/data_migration_mapping/data_migration_mapping.json
@@ -2,7 +2,7 @@
  "allow_copy": 0, 
  "allow_guest_to_view": 0, 
  "allow_import": 0, 
- "allow_rename": 0, 
+ "allow_rename": 1, 
  "autoname": "field:mapping_name", 
  "beta": 1, 
  "creation": "2017-08-11 05:11:49.975801", 
@@ -161,6 +161,36 @@
    "remember_last_selected_value": 0, 
    "report_hide": 0, 
    "reqd": 1, 
+   "search_index": 0, 
+   "set_only_once": 0, 
+   "unique": 0
+  }, 
+  {
+   "allow_bulk_edit": 0, 
+   "allow_on_submit": 0, 
+   "bold": 0, 
+   "collapsible": 0, 
+   "columns": 0, 
+   "fieldname": "local_primary_key", 
+   "fieldtype": "Data", 
+   "hidden": 0, 
+   "ignore_user_permissions": 0, 
+   "ignore_xss_filter": 0, 
+   "in_filter": 0, 
+   "in_global_search": 0, 
+   "in_list_view": 0, 
+   "in_standard_filter": 0, 
+   "label": "Local Primary Key", 
+   "length": 0, 
+   "no_copy": 0, 
+   "permlevel": 0, 
+   "precision": "", 
+   "print_hide": 0, 
+   "print_hide_if_no_value": 0, 
+   "read_only": 0, 
+   "remember_last_selected_value": 0, 
+   "report_hide": 0, 
+   "reqd": 0, 
    "search_index": 0, 
    "set_only_once": 0, 
    "unique": 0
@@ -538,8 +568,8 @@
  "issingle": 0, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-09-20 13:40:56.065878", 
- "modified_by": "frappetest@gmail.com", 
+ "modified": "2017-09-21 00:42:08.279991", 
+ "modified_by": "Administrator", 
  "module": "Data Migration", 
  "name": "Data Migration Mapping", 
  "name_case": "", 
